Completely changed theme and UI. Added new icons, implemented accordion component for daily weather details, set up current weather dashboard.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ dist
 dist-ssr
 *.local
 /public
+src/assets/icons/Weather Icons 1.1 Light Mode Sexy/
+src/assets/icons/Colored/
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
