--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 /public
+src/Api.jsx
 src/assets/icons/Weather Icons 1.1 Dark Mode/
 src/assets/icons/Weather Icons 1.1 Light Mode Sexy/
 src/assets/icons/Weather Icons 1.1 Light Mode/
