--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
+		"react-select-async-paginate": "^0.7.3",
 		"vite-plugin-svgr": "^3.2.0"
 	},
 	"devDependencies": {
