--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
 		"react-select-async-paginate": "^0.7.3",
+		"uuid": "^9.0.0",
 		"vite-plugin-svgr": "^3.2.0"
 	},
 	"devDependencies": {
