--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
 		"react-select-async-paginate": "^0.7.3",
+		"react-use-draggable-scroll": "^0.4.7",
 		"tailwind-scrollbar-hide": "^1.1.7",
 		"uuid": "^9.0.0",
 		"vite-plugin-svgr": "^3.2.0"
