added leaflet library as a dependency and created a bare map

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
 		"@material-design-icons/svg": "^0.14.9",
 		"@mui/icons-material": "^5.11.16",
 		"@mui/material": "^5.13.6",
+		"leaflet": "^1.9.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.10.1",
+		"react-leaflet": "^4.2.1",
 		"react-select-async-paginate": "^0.7.3",
 		"react-use-draggable-scroll": "^0.4.7",
 		"tailwind-scrollbar-hide": "^1.1.7",
